            - New routines dot() and writeDot().
            - New alias sig(), which is is identical to isoSig().
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
            - The two-argument copy constructor is now a three-argument
              copy constructor, giving an additional boolean option for
              whether to clone simplex/facet locks.
            - Replaced makeDoubleCover() with doubleCover(), which returns the
              result as a new triangulation.  The old routine is kept but
              deprecated.
            - Renamed simplifiedFundamentalGroup to setGroupPresentation().
              The old name is deprecated but kept for backwards compatibility.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
        Class Triangulation<2>:
            - New routine twoZeroMove().
        Class Triangulation<3>:
            - Routine puncture() now takes an optional triangle, not an
              optional tetrahedron.  The old version is kept but deprecated.
            - Routine insertLayeredSolidTorus() is now non-recursive, and
              throws an exception if its preconditions fail.
            - Routines layerOn(), pinchEdge() and puncture() now throw an
              exception if their preconditions fail.
            - Routine reorderTetrahedraBFS() is now a deprecated alias for
              reorderBFS() (which is available in all dimensions).
            - Routine idealToFinite() no longer subdivides the triangulation
              if there are invalid edges but no vertices to truncate.
            - Routines hasStrictAngleStructure(), hasGeneralAngleStructure(),
              strictAngleStructure() and generalAngleStructure() have changed