@@ -306,6 +306,8 @@ Version 7.4  [ (to be announced) ]
             - Renamed dumpConstruction() to source(), and extended it to produce
               either C++ and Python code via an optional language argument.
               The old C++-only dumpConstruction() is kept but deprecated.
+            - Renamed insertTriangulation() to insert().  The old name is kept
+              as a deprecated alias.
             - The two-argument copy constructor is now a three-argument
               copy constructor, giving an additional boolean option for
               whether to clone simplex/facet locks.
